--- a/QuizApp/style.css
+++ b/QuizApp/style.css
@@ -52,8 +52,12 @@ h3{
 ul li{
     margin: 1rem 0px;
     font-size:1.1rem;
+    cursor: pointer;
 
+}
 
+ul li label{
+    cursor:pointer;
 }
 
 ul{
@@ -66,10 +70,18 @@ button{
     padding: 10px 0px;
     border: none;
     color: white;
-    background: #6441A5;
+
     border-radius: 5px;
     margin:10px auto;
     display: flex;
     justify-content:center;
     cursor: pointer;
+}
+
+.submit{
+    background: #6441A5;
+}
+
+.result{
+    background: #41a569;
 }
