--- a/RecipeApp/style.css
+++ b/RecipeApp/style.css
@@ -77,17 +77,36 @@ input:focus, textarea:focus, select:focus{
     outline: none;
 }
 
+/* TO STYLE PLACEHOLDER TEXT */
+
+input::-webkit-input-placeholder { /* Edge */
+    color: red;
+  }
+
+input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+color: red;
+}
+
+input::placeholder {
+color: red;
+}
+
+/* TO STYLE PLACEHOLDER TEXT END */
+
 .fav-container h3{
     text-align: center;
     margin: 15px 0px;
 }
 
 .fav-meals{
+    min-height: 151px;
     display: flex;
     align-items: center;
-    justify-content:center;
+
     padding: 10px 0px;
     background: #d3ecf7;
+    overflow-x: scroll;
+
 
 }
 
@@ -97,7 +116,12 @@ input:focus, textarea:focus, select:focus{
     justify-content: center;
     align-items: center;
     margin: 0px 20px;
+    min-width: 140px;
+    position: relative;
+    max-width: 140px;
 }
+
+
 
 .fav-meals li img{
     border-radius: 50%;
@@ -117,7 +141,7 @@ input:focus, textarea:focus, select:focus{
 
 
 .meal {
-    margin: 30px;
+    padding: 30px;
 }
 
 .meal-header{
@@ -156,4 +180,75 @@ input:focus, textarea:focus, select:focus{
 
 .meal-body h4{
     margin:0;
+}
+
+
+.fav-meal-name{
+
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+
+.fav-meals::-webkit-scrollbar {
+    width: 1em;
+
+    height: 7px;
+  }
+
+  .fav-meals::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgb(255 0 0 / 70%);
+  }
+
+  .fav-meals::-webkit-scrollbar-thumb {
+    background-color: #ff384b;
+    outline: 0px solid black;
+  }
+
+
+  i.fas.fa-times-circle {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 21px;
+    border: 2px solid white;
+    border-radius: 12px;
+    color: #b94e9e;
+    cursor: pointer;
+    opacity: 0;
+}
+
+i.fas.fa-times-circle:hover {
+    opacity: 1;
+    color: #720c58;
+}
+
+.title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.recipe{
+  margin:0 auto;
+  margin-top:3%;
+  overflow:hidden;
+}
+
+.d-none{
+    display: none;
+}
+
+.show{
+    background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 8px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
 }
