--- a/RecipeApp/style.css
+++ b/RecipeApp/style.css
@@ -106,6 +106,7 @@ color: red;
     padding: 10px 0px;
     background: #d3ecf7;
     overflow-x: scroll;
+	
 
 
 }
@@ -119,6 +120,7 @@ color: red;
     min-width: 140px;
     position: relative;
     max-width: 140px;
+	cursor:pointer;
 }
 
 
@@ -142,6 +144,7 @@ color: red;
 
 .meal {
     padding: 30px;
+	cursor:pointer;
 }
 
 .meal-header{
@@ -208,6 +211,23 @@ color: red;
   }
 
 
+.popup::-webkit-scrollbar {
+    width: 7px;
+
+  }
+  
+  .popup::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgb(255 0 0 / 70%);
+  }
+
+  .popup::-webkit-scrollbar-thumb {
+    background-color: #ff384b;
+    outline: 0px solid black;
+  }
+  
+  
+  
+
   i.fas.fa-times-circle {
     position: absolute;
     top: 10px;
@@ -251,4 +271,69 @@ i.fas.fa-times-circle:hover {
   display: inline-block;
   font-size: 16px;
   cursor: pointer;
+}
+
+
+.popup-container{
+	background-color: rgba(0,0,0, 0.5);
+	position:fixed;
+	display:flex;
+	align-items:center;
+	justify-content:center;
+	left:0;
+	right:0;
+	top:0;
+	bottom:0;
+}
+
+.popup{
+	background-color:#fff;
+	border-radius:5px;
+	width:100%;
+	max-width:800px;
+	padding:0 2rem;
+	max-height:100vh;
+	position:relative;
+	overflow-y:scroll;
+	
+}
+
+.meal-info h3{
+	text-align:center;
+	padding:15px 0px;
+}
+
+.meal-info img{
+	width:100%;
+	object-fit:cover;
+}
+
+.popup .close-popup{
+	background-color:transparent;
+	border:none;
+	font-size:1.5rem;
+	position:absolute;
+	top:1rem;
+	right:1rem;
+}
+
+
+button{
+	border:none;
+	background:transparent;
+}	
+
+.hidden{
+	opacity:0;
+	pointer-events:none;
+}
+
+#show{
+	
+	padding: 10px;
+    background: #f7476f;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+	
 }
